# DiffSensei

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/inference/: eval_input.json  eval_page.json
configs/train/diffsensei/: self_finetune_wai_condition_5060ti.yaml
configs/upstream/train/: self_0.5.yaml
scripts/dataset/: auto_annotate.py  extract_ref.py
scripts/demo/: _diag_dtype_res.py  eval_input.json  eval_page.json  gen_wai.py  inference_trained.py  make_page.py  reproduce.py
scripts/eval/: reproduce.py
scripts/inference/: inference_trained.py  make_page.py
scripts/refs/: gen_wai.py
scripts/train/: hf_paths.py  precompute_latents.py  precompute_text_embeds.py  prepare_diffsensei.py  prepare_wai.py  train.py
src/datasets/: dataset_size_bucket.py  utils.py
src/diffsensei/: train_utils.py
src/diffsensei/cli/dataset/: auto_annotate.py  extract_ref.py
src/diffsensei/cli/eval/: reproduce.py
src/diffsensei/cli/inference/: inference_trained.py  make_page.py
src/diffsensei/cli/refs/: gen_wai.py
src/diffsensei/cli/train/: hf_paths.py  precompute_latents.py  precompute_text_embeds.py  prepare_diffsensei.py  prepare_wai.py  train.py
src/diffsensei/datasets/: dataset_size_bucket.py
src/diffsensei/inference/: __init__.py  eval_utils.py  pipeline.py
src/diffsensei/models/: resampler.py  unet.py  utils.py
src/diffsensei/pipelines/: pipeline_diffsensei.py
src/inference/: eval_utils.py  pipeline.py
src/models/: utils.py
src/pipelines/: pipeline_diffsensei.py
tests/: test_inference_imports.py
